# automate-invoice-ingestion

./: .gitignore  README.md  behave.ini  main.py  progress.output  pyproject.toml
.github/: copilot-instructions.md
.github/instructions/: adapters.instructions.md  api.instructions.md  ports.instructions.md  security.instructions.md  services.instructions.md
.github/prompts/: adr-author.prompt.md  architecture-preflight.prompt.md  implementation-plan.prompt.md  spec-planning-template.prompt.md
adapters/: accounting_source_adapter.py  ap_email_adapter.py  in_memory_intake_repository_adapter.py  noop_ingestion_alert_adapter.py
api/: invoice_ingestion.py
api/dependencies/: auth.py
api/schemas/: api_response.py  invoice_ingestion.py
ci/: eval-gate-example.yml  quality-gate-example.yml
common/: ingestion_types.py
docs/: intro.md
docs/architecture/: API_CONVENTIONS.md  ARCH_CONTRACT.md  BOUNDARIES.md  SECURITY_AUTH_PATTERNS.md
domain/: errors.py  invoice_dedupe_policy.py
features/: environment.py
features/feature_name/: eval_criteria.yaml  nfrs.md
features/invoice_ingestion/: acceptance.feature  architecture_preflight.md  eval_criteria.yaml  nfrs.md  plan.md
features/steps/: invoice_ingestion_steps.py
governance/schemas/: eval_criteria.schema.json
governance/templates/: architecture_preflight.md  plan.md
ports/inbound/: invoice_ingestion_port.py
ports/outbound/: accounting_source_port.py  ap_email_source_port.py  ingestion_alert_port.py  intake_repository_port.py
services/: invoice_ingestion_service.py
tests/eval/: evaluators.py  (+1 more)
(+9 files in other folders)
