[project]
name = "automate-invoice-ingestion"
version = "0.1.0"
description = "Invoice ingestion service scaffolding"
requires-python = ">=3.11"
dependencies = [
	"pytest>=8.0.0",
	"behave>=1.2.6",
	"fastapi>=0.115.0",
	"pydantic>=2.8.0",
	"pyyaml>=6.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
